temp monitoring works (add units)

--- a/index.html
+++ b/index.html
@@ -171,12 +171,12 @@
               
               
               <td>
-                <div class="ssoItemHeader" id="sso_temp_header">
+                <div class="ssoItemHeader" id="sso_temperature_header">
                   Temperature: 
                 </div>
               </td>
               <td>
-                <div class="ssoItemValue" id="sso_temp">
+                <div class="ssoItemValue" id="sso_temperature">
                   52°C 
                 </div>
               </td>
